test/zinc_source/compile_errors/callables/16_super_assign_non_captured.zn
// expected-error: '<<-' expects a captured outer variable 'x'
fn main() {
    x = 1
    x <<- 2
}

